fix: canvas overflowing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,13 @@
 body {
   font-family: "Roboto", sans-serif;
-  margin: 0;
-  padding: 0;
   background-color: white;
+  max-width: fit-content;
 }
 
 .container {
   margin: 0 80px;
+  max-width: 100%;
+
   @media screen and (max-width: 400px) {
     display: none;
   }
@@ -38,7 +39,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-left: 50px;
+  margin-left: 40px;
   gap: 20px;
   @media screen and (max-width: 569px) {
     flex-direction: column;
@@ -112,9 +113,9 @@ option {
 #array-options {
   cursor: pointer;
 }
-canvas {
+/* canvas {
   margin: 10px 10%;
-}
+} */
 .side-panel {
   position: relative;
   display: none;
